2012-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in: Remove "has_jtag" from Xmega A4 and D4
	devices, as they only have PDI.

2012-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #37265: wrong page sizes for XMega64xx in avrdude.conf
	* avrdude.conf.in: Fix page sizes for all Xmega devices,
	by cross-checking against Atmel Studio's device XML files

2012-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c: Fill in the missing pieces for Xmega support (both,
	PDI and JTAG).
	* jtagmkII.c (jtagmkII_set_xmega_params): Use "fuse1" rather
	than "fuse0" memory space to fill in the NVM offset from, as
	there is no "fuse0" on some Xmega devices.

2012-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega256RFR2, ATmega128RFR2, ATmega64RFR2):
	New devices

2012-11-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	First support for Atmel JTAGICE3.  Guessed from USB sniffer
	traces made by Knut Schwichtenberg, and by similarity to
	JTAGICEmkII.
	Still quite incomplete, just megaAVR/JTAG is done by now.
	* jtag3.c: New file.
	* jtag3.h: (Dito.)
	* jtag3_private.h: (Dito.)
	* pgm_type.c: Add new programmers
	* avrdude.conf.in: (Dito.)
	* usbdevs.h: Add new parameters
	* Makefile.am: Add new files
	* usb_libusb.c: Handle separate event endpoint, and larger
	(USB 2.0) packet sizes

2012-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Change all the USB details (endpoint numbers,
	max transfer size etc.) to a per-programmer adjustable value.
	* serial.h: (Dito.)
	* stk500v2.c: (Dito.)
	* usbdevs.h: (Dito.)
	* usb_libusb.c: (Dito.)

2012-11-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Replace outdated FSF postal address by a reference to
	the GPL info on their website.
	* jtagmkII.c: (Dito.)
	* avrftdi.c: (Dito.)
	* wiring.c: (Dito.)
	* linux_ppdev.h: (Dito.)
	* serbb.h: (Dito.)
	* usbtiny.h: (Dito.)
	* confwin.c: (Dito.)
	* buspirate.h: (Dito.)
	* avrftdi.h: (Dito.)
	* wiring.h: (Dito.)
	* jtagmkII.h: (Dito.)